--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body class="page-sub">
     <header>
         <div class="site-id">
-            <h1><a href="index.html">JD</a></h1>
+            <h1><a href="index.html">KL</a></h1>
         </div>
         <nav class="site-nav">
             <ul>
@@ -34,9 +34,9 @@
                 <h3>Course Resources</h3>
                 <p>Primary Links used in this class</p>
                 <ul>
-                    <li><a href="https://sites.google.com/view/jddesigns/home">My Google Site</a></li>
-                    <li><a href="https://iolanichris.github.io/">My Coded Static Site</a></li>
-                    <li><a href="https://github.com/iolanichris/iolanichris.github.io">My Github Repo</a></li>
+                    <li><a href="https://sites.google.com/view/kldesigns/home">My Google Site</a></li>
+                    <li><a href="https://iolanikaiden.github.io/">My Coded Static Site</a></li>
+                    <li><a href="https://github.com/iolanichris/iolanikaiden.github.io">My Github Repo</a></li>
                     <!-- <li><a href="https://codepen.io/iolanichris">My Codepen</a></li> -->
                     <!-- <li><a href="#">My XD SHared Prototype</a> -->
                     </li>
