--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="site-id">
-            <h1><a href="index.html">JD</a></h1>
+            <h1><a href="index.html">KL</a></h1>
         </div>
         <nav class="site-nav">
             <ul>
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="hero">
-            <h2>Hi, I'm JD</h2>
+            <h2>Hi, I'm KL</h2>
             <p>I am a web design student. This site is part of a hands-on class exercise to learn the basics of HTML. CSS, &ampl JavaScript.</p>
             <a href="about.html" class="button dark">Learn More About What I Learned</a>
         </section>
