--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
                 <p>Primary Links used in this class</p>
                 <ul>
                     <li><a href="https://sites.google.com/view/kldesigns/home">My Google Site</a></li>
-                    <li><a href="https://iolanikaiden.github.io/">My Coded Static Site</a></li>
-                    <li><a href="https://github.com/iolanichris/iolanikaiden.github.io">My Github Repo</a></li>
+                    <li><a href="https://iolanichris.github.io/">My Coded Static Site</a></li>
+                    <li><a href="https://github.com/iolanichris/iolanichris.github.io">My Github Repo</a></li>
                     <!-- <li><a href="https://codepen.io/iolanichris">My Codepen</a></li> -->
                     <!-- <li><a href="#">My XD SHared Prototype</a> -->
                     </li>
